# nopeai

./: .coveragerc  .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
coverage/: README.md
python/: README.md  pyproject.toml  requirements-dev.txt
python/src/: engine.py  errors.py  examples.py  init.py  types.py
python/src/nopeai/: __init__.py  engine.py  errors.py  examples.py  types.py
python/tests/: test_engine.py
scripts/: generate-coverage-report.mjs  release-check.mjs  smoke-test-python.sh  smoke-test-typescript.mjs
typescript/: README.md  package.json  tsconfig.build.json
typescript/src/: engine.ts  errors.ts  examples.ts  index.ts  types.ts
typescript/tests/: engine.test.ts
